--- a/src/Menu.css
+++ b/src/Menu.css
@@ -1,22 +1,28 @@
-/*Cabeçalho da pagina*/
 header{
+    border-bottom: solid green 1px;
+}
+
+header nav{
+     
     display: flex;
-    justify-content: space-around;
-    background-color: rgb(54, 3, 52);
-    height: 60px;
-    width: 100%;
     align-items: center;
-   }
+    height: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 
- /* Imagem do logo*/
-img{
-   width: 70px;
-   height: 60px;
+}
+header nav div {
+    padding: 15px;
+}
+header nav div a {
+    padding: 0px 10px;
+    font-family: fantasy;
+
 }
 
-/*Itens da nav*/
-.botoes a{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    margin-left: 20px;
-    color:white;
+header nav div input {
+margin-left: 2px;
+margin-right: 2px;
 }
+
